cmake_minimum_required(VERSION 3.5)
project(day02)
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../abseil-cpp ${CMAKE_CURRENT_BINARY_DIR}/abseil-cpp)
add_executable(part1 part1.cpp)
add_executable(part2 part2.cpp)
add_library(lib SHARED lib.cpp)
target_link_libraries(part1 PRIVATE lib)
target_link_libraries(part2 PRIVATE lib)
target_link_libraries(lib PRIVATE absl::strings)
