cmake_minimum_required(VERSION 3.5)
project(day02)
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(CMAKE_BUILD_TYPE Debug)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../abseil-cpp ${CMAKE_CURRENT_BINARY_DIR}/abseil-cpp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../boost ${CMAKE_CURRENT_BINARY_DIR}/boost)
add_executable(part1 part1.cpp)
add_executable(part2 part2.cpp)
add_executable(test_lib test_lib.cpp)
add_library(lib SHARED lib.cpp)
target_link_libraries(part1 PRIVATE lib)
target_link_libraries(part2 PRIVATE lib)
target_link_libraries(lib PRIVATE absl::strings)
target_link_libraries(test_lib PRIVATE lib)
target_link_libraries(test_lib PRIVATE boost_included_unit_test_framework)
