cabal-version:   3.0
name:            day05
version:         0.1.0.0
license:         NONE
author:          Vinh
maintainer:      zinh@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day05
    import:           warnings
    main-is:          Part1.hs
    build-depends:    base ^>=4.18.0.0, containers
    other-modules:    Lib
    hs-source-dirs:   app
    default-language: Haskell2010

executable part2
    import:           warnings
    main-is:          Part2.hs
    build-depends:    base ^>=4.18.0.0, containers
    other-modules:    Lib
    hs-source-dirs:   app
    default-language: Haskell2010
